--- a/.github/workflows/ci_pytest_wf.yml
+++ b/.github/workflows/ci_pytest_wf.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Testing YAML Configurations
 
 on:
   push:
@@ -29,8 +29,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-        # Optionally install other dependencies
         pip install -r requirements.txt
 
     - name: Run tests
